# browser

./: .gitignore  BENCHES.md  Cargo.toml  FONTS.md  LICENSE  NOTICE.md  README.md  rustfmt.toml
browser-core/: Cargo.toml
browser-core/src/: browser.rs  commands.rs  events.rs  lib.rs  tab.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: browser.rs  commands.rs  context.rs  database.rs  errors.rs  events.rs  headless.rs  lib.rs  navigation.rs  profile.rs  tab.rs
crates/browser-core/src/cli/: headless.rs
crates/browser-core/src/commands/: html.rs  image.rs  navigate.rs  tab.rs
crates/browser-core/src/context/: collector.rs  history.rs  page.rs
crates/browser-core/src/profile/: database.rs  paths.rs
crates/browser-core/src/service/: network.rs
crates/browser-core/src/tab/: collector.rs  manager.rs  page.rs  tabs.rs
crates/browser-headless/: Cargo.toml
crates/browser-headless/src/: commands.rs  engine.rs  lib.rs
crates/browser-headless/src/commands/: content.rs  dom.rs  layout.rs  navigation.rs  node.rs  tabs.rs
crates/browser-ui/: Cargo.toml
crates/browser-ui/src/: core.rs  errors.rs  events.rs  lib.rs  manager.rs  renderer.rs  runtime.rs
crates/browser-ui/src/core/: app.rs  handler.rs  tabs.rs  window.rs
crates/browser-ui/src/events/: browser.rs  devtools.rs  engine.rs  event.rs  kernel.rs  window.rs
crates/browser-ui/src/renderer/: pipeline.rs  primitives.rs  program.rs  viewport.rs
crates/browser-ui/src/util/: fonts.rs  image.rs
crates/browser-ui/src/views/: browser.rs
crates/browser-ui/src/windows/: browser.rs  devtools.rs
crates/cookies/: Cargo.toml
crates/cookies/src/: cookie.rs  cookie_store.rs  errors.rs  lib.rs  table.rs
crates/css-parser/: Cargo.toml
crates/css-parser/benches/: parser_bench.rs
crates/css-parser/src/: errors.rs  lib.rs  parser.rs  property.rs  rules.rs  stylesheet.rs
crates/css-parser/src/consumers/: block.rs  component.rs  declaration.rs  function.rs  rule.rs
crates/css-style/: Cargo.toml
crates/css-style/src/: cached_stylesheet.rs  calculate.rs  cascade.rs  computed.rs  functions.rs  handler.rs  lib.rs  primitives.rs  properties.rs  resolver.rs  rules.rs  specified.rs  tree.rs  types.rs  unit.rs
crates/css-style/src/computed/: color.rs  dimension.rs  flex.rs  handler.rs  image.rs  layout.rs  offset.rs  position.rs
crates/css-style/src/functions/: calculate.rs  math.rs  variables.rs
crates/css-style/src/primitives/: angle.rs  background.rs  blend.rs  color.rs  display.rs  font.rs  global.rs  gradient.rs  image.rs  length.rs  percentage.rs  position.rs
crates/css-style/src/properties/: background.rs  border.rs  color.rs  dimension.rs  display.rs  font.rs  gradient.rs  length.rs  (+4 more)
crates/css-tokenizer/: Cargo.toml
crates/css-tokenizer/benches/: tokenizer_benchmark.rs
crates/css-tokenizer/src/: char.rs  consumers.rs  errors.rs  lib.rs  tokenizer.rs  tokens.rs  validator.rs
crates/engine/: Cargo.toml
crates/engine/src/: cli.rs  headers.rs  headless.rs  main.rs  message.rs
crates/html-parser/: Cargo.toml
crates/html-parser/benches/: parser_benches.rs
crates/html-parser/src/: errors.rs  lib.rs  parser.rs  state.rs
crates/http-cache/: Cargo.toml
crates/http-cache/src/: block.rs  disk.rs  errors.rs  header.rs  http.rs  index.rs  large.rs  lib.rs
crates/http-fetch/: Cargo.toml  LICENSE
crates/http-fetch/src/: cache.rs  client.rs  clients.rs  cookies.rs  decoding.rs  errors.rs  handle.rs  handles.rs  headers.rs  lib.rs  middleware.rs  request.rs
crates/http-types/: Cargo.toml
crates/http-types/src/: body.rs  errors.rs  lib.rs  properties.rs  request.rs  response.rs
crates/io/: Cargo.toml
crates/io/src/: backends.rs  cache.rs  embed.rs  embedded.rs  embeded.rs  entries.rs  entry.rs  errors.rs  files.rs  http.rs  lib.rs  loader.rs  logging.rs  manager.rs  network.rs  paths.rs  traits.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: browser.rs  commands.rs  errors.rs  events.rs  header.rs  headless.rs  lib.rs  navigation.rs  tab.rs
crates/layout/: Cargo.toml
crates/layout/benches/: layout_integration_benchmark.rs
crates/layout/src/: builder.rs  context.rs  engine.rs  float.rs  layout.rs  lib.rs  mode.rs  node.rs  position.rs  primitives.rs  resolver.rs  text.rs  tree.rs
crates/layout/tests/: integration.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  clients.rs  errors.rs  http.rs  lib.rs  request.rs  response.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  core.rs  events.rs  lib.rs  manager.rs  runtime.rs  util.rs  views.rs
engine/: Cargo.toml
engine/benches/: engine.rs
engine/src/: main.rs
engine/src/util/: constants.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: css_cssom.rs  html_parser.rs  html_tokenizer.rs
html/html-parser/: Cargo.toml
html/html-parser/benches/: parser_benches.rs
html/html-parser/src/: collector.rs  dom.rs  lib.rs  parser.rs  tokens.rs  tree.rs
network/: Cargo.toml
network/src/: client.rs  data.rs  http.rs  lib.rs  main.rs  page.rs  request.rs  rules.rs  session.rs  util.rs  web.rs
network/src/client/: reqwest.rs
network/src/clients/: reqwest.rs
network/src/headers/: csp.rs
network/src/http/: client.rs  request.rs  response.rs
network/src/rules/: cors.rs  csp.rs  simple.rs
network/src/session/: middleware.rs  network.rs  policy.rs
network/src/util/: source.rs
network/src/web/: builder.rs  client.rs
ui/: Cargo.toml
ui/src/: api.rs  browser.rs  content.rs  core.rs  debug.rs  events.rs  html.rs  lib.rs  manager.rs  network.rs  renderer.rs  runtime.rs  topbar.rs  util.rs  views.rs
ui/src/api/: message.rs  tabs.rs  window.rs
ui/src/core/: app.rs  handle.rs  tabs.rs
ui/src/html/: block.rs  context.rs  div.rs  image.rs  img.rs  inline.rs  layout.rs  link.rs  list.rs  renderer.rs  text.rs  ui.rs  util.rs
ui/src/network/: client.rs  loader.rs  thread.rs
ui/src/renderer/: html.rs  inline.rs  layout.rs  renderer.rs  util.rs
ui/src/util/: font.rs  image.rs  path.rs
ui/src/views/: browser.rs  devtools.rs
(+582 files in other folders)
