[workspace]
resolver = "3"
members = [
    "crates/bootstrap",
    "crates/browser-config",
    "crates/browser-core",
    "crates/browser-headless",
    "crates/browser-preferences",
    "crates/browser-ui",
    "crates/constants",
    "crates/cookies",
    "crates/css-cssom",
    "crates/css-parser",
    "crates/css-selectors",
    "crates/css-style",
    "crates/css-tokenizer",
    "crates/css-values",
    "crates/database",
    "crates/html-dom",
    "crates/html-parser",
    "crates/html-tokenizer",
    "crates/io",
    "crates/layout",
    "crates/network",
    "crates/renderer",
    "crates/storage",
]

[workspace.package]
edition      = "2024"
license      = "MIT"

[workspace.dependencies]
browser-config      = { path = "crates/browser-config" }
browser-core        = { path = "crates/browser-core" }
browser-headless    = { path = "crates/browser-headless" }
browser-preferences = { path = "crates/browser-preferences" }
browser-ui          = { path = "crates/browser-ui" }
constants           = { path = "crates/constants" }
cookies             = { path = "crates/cookies" }
css-cssom           = { path = "crates/css-cssom" }
css-parser          = { path = "crates/css-parser" }
css-selectors       = { path = "crates/css-selectors" }
css-style           = { path = "crates/css-style" }
css-tokenizer       = { path = "crates/css-tokenizer" }
css-values          = { path = "crates/css-values" }
database            = { path = "crates/database" }
html-dom            = { path = "crates/html-dom" }
html-parser         = { path = "crates/html-parser" }
html-tokenizer      = { path = "crates/html-tokenizer" }
io                  = { path = "crates/io" }
layout              = { path = "crates/layout" }
network             = { path = "crates/network" }
renderer            = { path = "crates/renderer" }
storage             = { path = "crates/storage" }

# External dependencies
async-trait = "0.1.89"
clap        = { version = "4.5.54", features = ["derive"] }
cosmic-text = "0.15.0"
criterion   = "0.8.1"
http        = "1.3.1"
httpdate    = "1.0.3"
image       = "0.25.9"
postcard    = { version = "1.1.3", features = ["use-std"] }
regex       = "1.12.2"
rusqlite    = { version = "0.38.0", features = ["hooks"] }
serde       = { version = "1.0.228", features = ["derive"] }
serial_test = "3.4.0"
sha2        = "0.10.9"
strum       = { version = "0.27.2", features = ["derive"] }
thiserror   = "2.0.17"
tokio       = { version = "1.44", features = ["full", "tracing"] }
tracing     = "0.1.43"
url         = "2.5.4"
shell-words = "1.1.0"
zstd        = "0.13.3"

[profile.release]
debug = true
