[workspace]
resolver = "3"
members = [
    "crates/bootstrap",
    "crates/browser-config",
    "crates/browser-core",
    "crates/browser-headless",
    "crates/browser-preferences",
    "crates/browser-ui",
    "crates/cookies",
    "crates/css-cssom",
    "crates/css-parser",
    "crates/css-selectors",
    "crates/css-style",
    "crates/css-tokenizer",
    "crates/css-values",
    "crates/database",
    "crates/html-dom",
    "crates/html-parser",
    "crates/html-tokenizer",
    "crates/io",
    "crates/layout",
    "crates/manifest",
    "crates/network",
    "crates/renderer",
    "crates/storage",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"


[workspace.dependencies]
browser-config      = { path = "crates/browser-config" }
browser-core        = { path = "crates/browser-core" }
browser-headless    = { path = "crates/browser-headless" }
browser-preferences = { path = "crates/browser-preferences" }
browser-ui          = { path = "crates/browser-ui" }
cookies             = { path = "crates/cookies" }
css-cssom           = { path = "crates/css-cssom" }
css-parser          = { path = "crates/css-parser" }
css-selectors       = { path = "crates/css-selectors" }
css-style           = { path = "crates/css-style" }
css-tokenizer       = { path = "crates/css-tokenizer" }
css-values          = { path = "crates/css-values" }
database            = { path = "crates/database" }
html-dom            = { path = "crates/html-dom" }
html-parser         = { path = "crates/html-parser" }
html-tokenizer      = { path = "crates/html-tokenizer" }
io                  = { path = "crates/io" }
layout              = { path = "crates/layout" }
manifest            = { path = "crates/manifest" }
network             = { path = "crates/network" }
renderer            = { path = "crates/renderer" }
storage             = { path = "crates/storage" }

# External dependencies
async-trait         = "0.1.89"
bytemuck            = { version = "1.24.0", features = [ "derive" ] }
clap                = { version = "4.5.54", features = [ "derive" ] }
cosmic-text         = "0.15.0"
criterion           = "0.8.1"
dirs                = "6.0.0"
http                = "1.3.1"
httpdate            = "1.0.3"
iced                = { version = "0.14.0", features = [ "advanced", "tokio", "image", "svg", "wgpu" ] }
image               = "0.25.9"
libc                = "0.2.184"
postcard            = { version = "1.1.3", features = [ "use-std" ] }
rand                = "0.10.1"
regex               = "1.12.2"
reqwest             = { version = "0.13.2", features = [ "json", "gzip", "brotli", "deflate", "rustls", ] }
rusqlite            = { version = "0.38.0", features = [ "hooks" ] }
rust-embed          = { version = "8.9.0", features = [ "include-exclude" ] }
serde               = { version = "1.0.228", features = [ "derive" ] }
serial_test         = "3.4.0"
sha2                = "0.10.9"
shell-words         = "1.1.0"
strum               = { version = "0.27.2", features = [ "derive" ] }
sys-locale          = "0.3.2"
sysinfo             = { version = "0.38.4", default-features = false, features = [ "system" ] }
thiserror           = "2.0.17"
time                = { version = "0.3.47", features = [ "parsing", "macros" ]}
tokio               = { version = "1.51.1", features = [ "full", "tracing" ] }
toml                = "0.9.11"
tracing             = "0.1.43"
tracing-subscriber  = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
url                 = "2.5.4"
wgpu                = "27.0.1"
zstd                = "0.13.3"


[patch.crates-io]
iced = { git = "https://github.com/andre-eriksson/iced", branch = "custom-format" }

[profile.release]
debug = true

[profile.bench]
inherits = "release"
debug = 1
