[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
errors = { path = "../errors" }
cookies = { path = "../cookies" }
constants = { path = "../utilities/constants" }
ui = { path = "../ui" }
http = { workspace = true }
