[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.18", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
cookies = { path = "../cookies" }
tokio = { workspace = true }
tracing = { workspace = true }
cookie = { workspace = true }
url = "2.5.4"
http = "1.3.1"
rustls = "0.23.35"
