[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
cookies = { path = "../cookies" }
errors = { path = "../errors" }
tokio = { workspace = true }
tracing = { workspace = true }
telemetry = { path = "../utilities/telemetry" }
cookie = { workspace = true }
http = { workspace = true }
url = { workspace = true }
async-trait = "0.1.89"
reqwest = { version = "0.12.18", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
rustls = "0.23.35"
