[package]
name = "network"
version = "0.1.0"
edition.workspace = true

[dependencies]
cookies.workspace = true
errors.workspace = true
telemetry.workspace = true

# External dependencies
tokio.workspace = true
tracing.workspace = true
cookie.workspace = true
http.workspace = true
url.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12.18", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
rustls = "0.23.35"
