[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = [
    "multi-window",
    "tokio",
    "image",
    "svg",
] }
image = "0.25"
assets = { path = "../assets" }
tracing = { workspace = true }
html-parser = { path = "../html/html-parser" }
html-syntax = { path = "../html/html-syntax" }
network = { path = "../network" }
telemetry = { path = "../utilities/telemetry" }
http = { workspace = true }
url = { workspace = true }
cookies = { path = "../cookies" }
constants = { path = "../utilities/constants" }
