[package]
name = "bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
browser-config.workspace = true
browser-core.workspace = true
browser-headless.workspace = true
browser-ui.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
