[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
browser-config.workspace = true
browser-core.workspace = true
browser-headless.workspace = true
browser-ui.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-subscriber.workspace = true
