[package]
name = "browser-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
assets.workspace = true
cookies.workspace = true
constants.workspace = true
css-cssom.workspace = true
css-style.workspace = true
errors.workspace = true
html-dom.workspace = true
html-parser.workspace = true
network.workspace = true
storage.workspace = true
telemetry.workspace = true

# External dependencies
async-trait.workspace = true
http.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
postcard.workspace = true
