[package]
name = "browser-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
browser-config.workspace = true
manifest.workspace = true
cookies.workspace = true
css-cssom.workspace = true
css-style.workspace = true
html-dom.workspace = true
html-parser.workspace = true
io = { workspace = true, features = ["network"] }
network.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
