[package]
name = "browser-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
browser-config.workspace = true
browser-core.workspace = true
browser-preferences.workspace = true
cookies.workspace = true
css-cssom.workspace = true
css-style.workspace = true
css-values.workspace = true
html-dom.workspace = true
html-parser.workspace = true
http.workspace = true
iced.workspace = true
image.workspace = true
io.workspace = true
layout.workspace = true
manifest.workspace = true
network.workspace = true
postcard.workspace = true
regex.workspace = true
renderer.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
