[package]
name = "cookies"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
database.workspace = true
errors.workspace = true
time = { version = "0.3.45", features = ["parsing", "macros"]}

# External dependencies
rusqlite.workspace = true
tracing.workspace = true
url.workspace = true
