[package]
name = "cookies"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
database.workspace = true
time = { version = "0.3.45", features = ["parsing", "macros"]}
storage.workspace = true

# External dependencies
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
