[package]
name = "css-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
css-tokenizer.workspace = true
errors.workspace = true

# External dependencies
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
