[package]
name = "css-style"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
html-dom.workspace = true
css-cssom.workspace = true
css-selectors.workspace = true
preferences.workspace = true
strum.workspace = true
url.workspace = true

[features]
network = ["preferences/network"]
