[package]
name = "css-style"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
browser-preferences.workspace = true
css-cssom.workspace = true
css-selectors.workspace = true
css-values.workspace = true
html-dom.workspace = true
strum.workspace = true
tracing.workspace = true
url.workspace = true

[features]
network = ["browser-preferences/network"]
