[package]
name = "css-tokenizer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
errors.workspace = true
tracing.workspace = true

# External dependencies
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tokenizer_benchmark"
harness = false
