[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
browser-core.workspace = true
cookies.workspace = true
constants.workspace = true
network.workspace = true
ui.workspace = true

# External dependencies
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
url.workspace = true
tokio.workspace = true
http.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
