[package]
name = "engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
browser-config.workspace = true
browser-core.workspace = true
cli.workspace = true
ui.workspace = true

# External dependencies
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
tokio.workspace = true
