[package]
name = "html-parser"
version = "0.1.0"
edition.workspace = true

[dependencies]
telemetry.workspace = true
errors.workspace = true
html-dom.workspace = true

# External dependencies
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parser_benches"
harness = false
