[package]
name = "html-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
html-dom.workspace = true

# External dependencies
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
zstd = "0.13.3"
criterion.workspace = true

[[bench]]
name = "parser_benches"
harness = false
