[package]
name = "http-cache"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
sha2.workspace = true
storage.workspace = true
database.workspace = true
http.workspace = true
url.workspace = true
thiserror.workspace = true
postcard.workspace = true
rusqlite.workspace = true
httpdate.workspace = true
tracing.workspace = true
http-types.workspace = true

[dev-dependencies]
serial_test.workspace = true
http-serde.workspace = true
