[package]
name = "http-fetch"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-compression.workspace = true
async-trait.workspace = true
bytes.workspace = true
cookies.workspace = true
futures.workspace = true
http-cache.workspace = true
http-policy.workspace = true
http-types.workspace = true
http.workspace = true
io.workspace = true
manifest.workspace = true
rand.workspace = true
reqwest.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
