[package]
name = "http-types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
http-serde.workspace = true
http.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
url.workspace = true
