[package]
name = "http-types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
http-serde.workspace = true
http.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
url.workspace = true
