[package]
name = "io"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
constants.workspace = true
cookies  = { workspace = true, optional = true }
database.workspace = true
dirs.workspace = true
httpdate.workspace = true
network = { workspace = true, optional = true }
postcard.workspace = true
rand.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
sha2.workspace = true
storage.workspace = true
strum.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
url = { workspace = true, optional = true}

[features]
default = []
network = ["dep:url", "dep:tokio", "dep:network", "dep:cookies"]


[dev-dependencies]
serial_test.workspace = true
