[package]
name = "io"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dirs.workspace = true
http-types.workspace = true
rust-embed.workspace = true
serde.workspace = true
storage.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serial_test.workspace = true
