[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
io = { workspace = true, features = ["network"] }
cli.workspace = true
cookies.workspace = true
constants.workspace = true
css-cssom.workspace = true
css-style.workspace = true
html-dom.workspace = true
html-parser.workspace = true
network.workspace = true

# External dependencies
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
thiserror.workspace = true
