[package]
name = "layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
css-style.workspace = true
html-dom.workspace = true

# External dependencies
cosmic-text.workspace = true
tracing.workspace = true

[dev-dependencies]
browser-core.workspace = true
html-parser.workspace = true
css-cssom.workspace = true
ui.workspace = true
assets.workspace = true
