[package]
name = "layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cosmic-text.workspace = true
css-style.workspace = true
css-values.workspace = true
html-dom.workspace = true
tracing.workspace = true

[dev-dependencies]
browser-core.workspace = true
browser-preferences.workspace = true
browser-ui.workspace = true
criterion.workspace = true
css-cssom.workspace = true
html-parser.workspace = true
io.workspace = true
url.workspace = true
zstd.workspace = true

[[bench]]
name = "layout_integration_benchmark"
harness = false
