[package]
name = "network"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
http.workspace = true
url.workspace = true
async-trait.workspace = true
reqwest = { version = "0.13.1", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls",
] }
thiserror.workspace = true
