[package]
name = "ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
assets.workspace = true
browser-config.workspace = true
browser-core.workspace = true
cookies.workspace = true
css-cssom.workspace = true
css-style.workspace = true
layout.workspace = true
errors.workspace = true
html-parser.workspace = true
html-dom.workspace = true
renderer.workspace = true
network.workspace = true
cosmic-text.workspace = true
constants.workspace = true
telemetry.workspace = true

# External dependencies
iced = { version = "0.14.0", features = [
    "advanced",
    "tokio",
    "image",
    "svg",
    "wgpu"
] }
image = "0.25"
tokio.workspace = true
tracing.workspace = true
http.workspace = true
url.workspace = true
