[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
io.workspace = true
kernel.workspace = true
cli.workspace = true
cookies.workspace = true
css-cssom.workspace = true
css-style.workspace = true
layout.workspace = true
html-parser.workspace = true
html-dom.workspace = true
renderer.workspace = true
network.workspace = true
preferences.workspace = true
constants.workspace = true

# External dependencies
iced = { version = "0.14.0", features = [
    "advanced",
    "tokio",
    "image",
    "svg",
    "wgpu"
] }
image = "0.25"
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
http.workspace = true
url.workspace = true
