[package]
name = "html-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
telemetry = { path = "../../utilities/telemetry" }
html-syntax = { path = "../html-syntax" }
html-dom = { path = "../html-dom" }
parsing = { path = "../../utilities/parsing" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_benches"
harness = false
