[package]
name = "html-parser"
version = "0.1.0"
edition.workspace = true

[dependencies]
telemetry.workspace = true
html-syntax.workspace = true
html-dom.workspace = true
html-tokenizer.workspace = true
network.workspace = true
parsing.workspace = true

# External dependencies
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parser_benches"
harness = false
